--- a/Graph.ipynb
+++ b/Graph.ipynb
@@ -6,7 +6,11 @@
    "id": "32874695-28ad-4d04-8e68-06686ee8d713",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Graph:\n",
+    "    def __init__(self):\n",
+    "        self."
+   ]
   }
  ],
  "metadata": {
