--- a/Tree.ipynb
+++ b/Tree.ipynb
@@ -96,6 +96,7 @@
     "            self.right.postorder()\n",
     "        print(self.key, end = \" \")\n",
     "        \n",
+    "        # deleteing a node\n",
     "    def delete(self, data, curr):\n",
     "        if self.key is None:\n",
     "            print('empty tree')\n",
@@ -138,12 +139,14 @@
     "            self.right = self.right.delete(node.key,curr)\n",
     "        return self\n",
     "    \n",
+    "    # fiding the lowest node\n",
     "    def min_node(self):\n",
     "        current = self\n",
     "        while current.left:\n",
     "            current = current.left\n",
     "        print('smallest', current.key)\n",
     "        \n",
+    "        # highest node\n",
     "    def max_node(self):\n",
     "        current = self\n",
     "        while current.right:\n",
