--- a/Graph.ipynb
+++ b/Graph.ipynb
@@ -2,14 +2,70 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "32874695-28ad-4d04-8e68-06686ee8d713",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graph Dict: {'Mumbai': ['New York', 'Japan'], 'Japan': ['London'], 'New York': ['Paris', 'Canada'], 'Paris': ['London', 'Dubai'], 'Canada': ['London', 'New York'], 'Dubai': ['London', 'Mumbai']}\n",
+      "Shortest path between Canada and Mumbai:  ['Canada', 'New York', 'Paris', 'Dubai', 'Mumbai']\n"
+     ]
+    }
+   ],
    "source": [
     "class Graph:\n",
-    "    def __init__(self):\n",
-    "        self."
+    "    def __init__(self, edges):\n",
+    "        self.edges = edges\n",
+    "        self.graph_dict = {}\n",
+    "        for start, end in edges:\n",
+    "            if start in self.graph_dict:\n",
+    "                self.graph_dict[start].append(end)\n",
+    "            else:\n",
+    "                self.graph_dict[start] = [end]\n",
+    "        print(\"Graph Dict:\", self.graph_dict)\n",
+    "        \n",
+    "    def shortest_path(self, start, end, path=[]):\n",
+    "        path = path + [start]\n",
+    "        \n",
+    "        if start == end:\n",
+    "            return path\n",
+    "        \n",
+    "        if start not in self.graph_dict:\n",
+    "            return \n",
+    "        \n",
+    "        shortest_path = None\n",
+    "        for node in self.graph_dict[start]:\n",
+    "            if node not in path:\n",
+    "                sp = self.shortest_path(node, end, path)\n",
+    "                if sp:\n",
+    "                    if shortest_path is None or len(sp) < len(shortest_path):\n",
+    "                        shortest_path = sp\n",
+    "\n",
+    "        return shortest_path\n",
+    "    \n",
+    "routes = [\n",
+    "        (\"Mumbai\",\"New York\"),\n",
+    "        (\"Mumbai\", \"Japan\"),\n",
+    "        (\"Japan\", \"London\"),\n",
+    "        (\"New York\",\"Paris\"),\n",
+    "        (\"New York\",\"Canada\"),\n",
+    "        (\"Paris\",\"London\"),\n",
+    "        (\"Paris\", \"Dubai\"),\n",
+    "        (\"Canada\", \"London\"),\n",
+    "        (\"Dubai\", \"London\"),\n",
+    "        (\"Canada\", \"New York\"),\n",
+    "        (\"Dubai\", \"Mumbai\")\n",
+    "    ]\n",
+    "\n",
+    "route_graph = Graph(routes)\n",
+    "\n",
+    "start = \"Canada\"\n",
+    "end = \"Mumbai\"\n",
+    "\n",
+    "print(f\"Shortest path between {start} and {end}: \", route_graph.shortest_path(start,end))"
    ]
   }
  ],
