--- a/Sorting/QuickSort.ipynb
+++ b/Sorting/QuickSort.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "f52ffba3-e615-4fda-9aa4-76ad5a898228",
    "metadata": {},
    "outputs": [
@@ -15,28 +15,28 @@
     }
    ],
    "source": [
-    "def quick_sort(elements, start, end):\n",
+    "def quick_sort(quick_list, start, end):\n",
     "    if start < end:\n",
-    "        pi = partition(elements, start, end)\n",
-    "        quick_sort(elements, start, pi-1)\n",
-    "        quick_sort(elements, pi+1, end)\n",
+    "        pi = partition(quick_list, start, end)\n",
+    "        quick_sort(quick_list, start, pi-1)\n",
+    "        quick_sort(quick_list, pi+1, end)\n",
     "\n",
-    "def partition(elements, start, end):\n",
+    "def partition(quick_list, start, end):\n",
     "    pivot_index = start\n",
-    "    pivot = elements[pivot_index]\n",
+    "    pivot = quick_list[pivot_index]\n",
     "\n",
     "    while start < end:\n",
-    "        while start < len(elements) and elements[start] <= pivot:\n",
+    "        while start < len(quick_list) and quick_list[start] <= pivot:\n",
     "            start+=1\n",
     "\n",
-    "        while elements[end] > pivot:\n",
+    "        while quick_list[end] > pivot:\n",
     "            end-=1\n",
     "\n",
     "        if start < end:\n",
-    "            elements[start], elements[end] = elements[end], elements[start]\n",
+    "            quick_list[start], quick_list[end] = quick_list[end], quick_list[start]\n",
     "\n",
     "    if pivot_index != end:\n",
-    "        elements[pivot_index], elements[end] = elements[end], elements[pivot_index] \n",
+    "        quick_list[pivot_index], quick_list[end] = quick_list[end], quick_list[pivot_index] \n",
     "\n",
     "    return end\n",
     "\n",
